--- a/Resources/sprites/lemmings.plist
+++ b/Resources/sprites/lemmings.plist
@@ -4,6 +4,216 @@
     <dict>
         <key>frames</key>
         <dict>
+            <key>bombing-0001.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,132},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0002.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,132},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0003.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,148},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0004.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,148},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0005.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,164},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0006.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,164},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0007.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,180},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0008.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,180},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0009.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,196},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0010.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,196},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0011.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,212},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0012.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,212},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0013.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{0,228},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bombing-0014.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{16,16}</string>
+                <key>textureRect</key>
+                <string>{{16,228},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
             <key>digging-0001.png</key>
             <dict>
                 <key>aliases</key>
@@ -15,7 +225,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,0},{12,12}}</string>
+                <string>{{20,40},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -30,7 +240,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,12},{12,12}}</string>
+                <string>{{0,52},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -45,7 +255,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,24},{12,12}}</string>
+                <string>{{12,52},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -60,7 +270,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,36},{12,12}}</string>
+                <string>{{0,64},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -75,7 +285,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,48},{12,12}}</string>
+                <string>{{12,64},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -90,7 +300,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,60},{12,12}}</string>
+                <string>{{0,76},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -105,7 +315,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,72},{12,12}}</string>
+                <string>{{12,76},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -120,7 +330,7 @@
                 <key>spriteSourceSize</key>
                 <string>{12,12}</string>
                 <key>textureRect</key>
-                <string>{{0,84},{12,12}}</string>
+                <string>{{0,88},{12,12}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -135,7 +345,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,96},{10,10}}</string>
+                <string>{{0,0},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -150,7 +360,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,106},{10,10}}</string>
+                <string>{{10,0},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -165,7 +375,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,116},{10,10}}</string>
+                <string>{{20,0},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -180,7 +390,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,126},{10,10}}</string>
+                <string>{{0,10},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -195,7 +405,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,136},{10,10}}</string>
+                <string>{{10,10},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -210,7 +420,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,14}</string>
                 <key>textureRect</key>
-                <string>{{0,146},{10,14}}</string>
+                <string>{{12,88},{10,14}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -225,7 +435,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,14}</string>
                 <key>textureRect</key>
-                <string>{{0,160},{10,14}}</string>
+                <string>{{22,88},{10,14}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -240,7 +450,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,14}</string>
                 <key>textureRect</key>
-                <string>{{0,174},{10,14}}</string>
+                <string>{{0,102},{10,14}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -255,7 +465,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,14}</string>
                 <key>textureRect</key>
-                <string>{{0,188},{10,14}}</string>
+                <string>{{10,102},{10,14}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -270,7 +480,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,15}</string>
                 <key>textureRect</key>
-                <string>{{0,202},{10,15}}</string>
+                <string>{{20,102},{10,15}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -285,7 +495,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,15}</string>
                 <key>textureRect</key>
-                <string>{{0,217},{10,15}}</string>
+                <string>{{0,117},{10,15}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -300,7 +510,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,15}</string>
                 <key>textureRect</key>
-                <string>{{0,232},{10,15}}</string>
+                <string>{{10,117},{10,15}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -315,7 +525,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,15}</string>
                 <key>textureRect</key>
-                <string>{{0,247},{10,15}}</string>
+                <string>{{20,117},{10,15}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -330,7 +540,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,262},{10,10}}</string>
+                <string>{{20,10},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -345,7 +555,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,272},{10,10}}</string>
+                <string>{{0,20},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -360,7 +570,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,282},{10,10}}</string>
+                <string>{{10,20},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -375,7 +585,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,292},{10,10}}</string>
+                <string>{{20,20},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -390,7 +600,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,302},{10,10}}</string>
+                <string>{{0,30},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -405,7 +615,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,312},{10,10}}</string>
+                <string>{{10,30},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -420,7 +630,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,322},{10,10}}</string>
+                <string>{{20,30},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -435,7 +645,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,332},{10,10}}</string>
+                <string>{{0,40},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -450,7 +660,7 @@
                 <key>spriteSourceSize</key>
                 <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{0,342},{10,10}}</string>
+                <string>{{10,40},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -466,9 +676,9 @@
             <key>realTextureFileName</key>
             <string>lemmings.png</string>
             <key>size</key>
-            <string>{12,352}</string>
+            <string>{32,244}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:d0c4dee51a1b6fb9a626b8efa4e9800c:a9e984e4148194ce442504ceb591be96:88ab09b251cb682b789df6fd09f6f023$</string>
+            <string>$TexturePacker:SmartUpdate:2e29aa32ac6ffd0d97a918d549615b4c:fc9169e93993515315e1724b029c60aa:88ab09b251cb682b789df6fd09f6f023$</string>
             <key>textureFileName</key>
             <string>lemmings.png</string>
         </dict>
